# rsiscool

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build_module.sh  package.json  srcs.cmake
src/: ReedSolomon.cpp  ReedSolomon.hpp  decoder_pgz.cpp  main.cpp  test.cpp  wasm.cpp  wasm.hpp
